--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -34,6 +34,7 @@ Enhancements
 * Removed old authentication code sources (Fixes #2610)
 * Added rule description in listing (Fixes #2619)
 * Improved documentation (PR #2774 fixes #2773)
+* Set a timeout for database queries for the admin to avoid long running queries slowing the system. (#2630) (PR #2659)
 
 Bug Fixes
 +++++++++
