--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -24,6 +24,7 @@ New Features
 Enhancements
 ++++++++++++
 
+* Keepalived can be configured to detect its peers via unicast instead of multicast (PR #2794)
 * Suggest VID in Admin Violations -> Add Violation (#2804) (PR #2807)
 * Enhanced English i18n strings in admin CMS violation actions.
 * Create a priority queue
